# flood-area-segmentation

./: .gitignore  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  default-logging.json  pyproject.toml  tox.ini
.gitlab/issue_templates/: default.md
configs/criterion/: flood.yaml
configs/dataset/: flood.yaml
configs/model/: sampleconfig.yaml  sampleconvnext.yaml
configs/optimizer/: adamw.yaml
configs/sampler/: flood.yaml
configs/scheduler/: reduceLR.yaml
configs/train/: base.yaml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
floodsegment/: __init__.py  cli.py  training.py
floodsegment/dataloader/: base.py  sampler.py  segment.py  transforms.py
floodsegment/dataloader/tests/: test_sampler.py  test_segment.py
floodsegment/model/: cnn.py  module.py
floodsegment/net/: base.py  cnn.py  model.py  module.py  network.py  utils.py
floodsegment/net/tests/: test_cnn.py  test_module.py
floodsegment/utils/: builder.py  logutils.py  misc.py  tensors.py  testers.py  viz.py  yaml.py
floodsegment/utils/tests/: test_builder.py  test_yaml.py
floodsegment/utils/tests/testdata/: sampleconfig.yaml
scripts/: build.sh  env.sh  log-env-variables.sh
tests/: __init__.py  test_floodsegment.py
