
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
version = "0.0.0"
name = "floodsegment"
authors = [{ name = "Neeth Kunnath", email = "neeth.xavier@gmail.com" }]
description = "Expriments with Kaggle Flood Area Segmentation dataset (https://www.kaggle.com/datasets/faizalkarim/flood-area-segmentation)"
license = { text = "MIT license" }
keywords = ["floodsegment"]
dependencies = ["click", "matplotlib", "opencv-contrib-python", "opencv-python", "numpy", "seaborn"]
requires-python = ">=3.10"
dynamic = ["readme"]
classifiers=[
        "Development Status :: 2 - Pre-Alpha",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Programming Language :: Python :: 3.10",
    ]

[project.optional-dependencies]
dev = ["black", "build", "tox", "coverage", "Sphinx", "twine", "click", "pytest", "black"]
test = ["tox", "coverage", "Sphinx", "twine", "click", "pytest", "black"]

[project.scripts]
floodsegment = "floodsegment.cli:main"

[project.urls]
repository = "https://gitlab.com/draconus21/floodsegment"
changelog = "https://gitlab.com/draconus21/floodsegment/blob/master/CHANGELOG.md"

[tool.setuptools.dynamic]
readme = { file = ["README.rst", "CONTRIBUTING.rst", "HISTORY.rst"] }

[tool.setuptools.packages.find]
  include=["floodsegment"]

[tool.pytest]
collect_ignore = ["setup.py"]

[tool.pytest.ini_options]
  addopts  ="--capture=sys --basetemp=testdata_tmp --junitxml=testreports/report.xml"
  testpaths=["benchmark", "."]

[tool.black]
  line-length = 120
  ignore = "E501"
  extend-exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.env
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
