
[build-system]
  build-backend="setuptools.build_meta"
  requires     =[ "setuptools" ]

[project]
  authors=[ { name="Neeth Kunnath", email="neeth.xavier@gmail.com" } ]
  classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10"
  ]
  dependencies=[
    "imageio",
    "pydantic",
    "click",
    "matplotlib",
    "opencv-contrib-python",
    "opencv-python",
    "numpy",
    "seaborn"
  ]
  description="Expriments with Kaggle Flood Area Segmentation dataset (https://www.kaggle.com/datasets/faizalkarim/flood-area-segmentation)"
  dynamic=[ "readme" ]
  keywords=[ "floodsegment" ]
  license={ text="MIT license" }
  name="floodsegment"
  requires-python=">=3.10"
  version="0.0.0"

[project.optional-dependencies]
  dev =[ "black", "build", "tox", "coverage", "Sphinx", "twine", "click", "pytest", "black" ]
  test=[ "tox", "coverage", "Sphinx", "twine", "click", "pytest", "black" ]

[project.scripts]
  floodsegment="floodsegment.cli:main"

[project.urls]
  changelog ="https://gitlab.com/draconus21/floodsegment/blob/master/CHANGELOG.md"
  repository="https://gitlab.com/draconus21/floodsegment"

[tool.setuptools.dynamic]
  readme={ file=[ "README.rst", "CONTRIBUTING.rst", "HISTORY.rst" ] }

[tool.setuptools.packages.find]
  include=[ "floodsegment" ]

[tool.pytest]
  collect_ignore=[ "setup.py" ]

[tool.pytest.ini_options]
  addopts  ="--capture=sys --basetemp=testdata_tmp --junitxml=testreports/report.xml"
  testpaths=[ "benchmark", "." ]

[tool.black]
  extend-exclude='''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.env
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
  ignore="E501"
  line-length=120
